// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TabsComponent > Snapshot tests > should match snapshot with custom className 1`] = `
<div>
  <div
    class="custom-class"
  >
    <div
      class="_tabs_4moa9_2"
      data-orientation="horizontal"
      data-part="root"
      data-scope="tabs"
      dir="ltr"
      id="tabs::r2:"
    >
      <div
        aria-orientation="horizontal"
        class="_tab-list_9h120_2"
        data-orientation="horizontal"
        data-part="list"
        data-scope="tabs"
        dir="ltr"
        id="tabs::r2::list"
        role="tablist"
      >
        <button
          aria-controls="tabs::r2::content-tab1"
          aria-selected="true"
          class="_tab_1ddod_2"
          data-focus=""
          data-orientation="horizontal"
          data-ownedby="tabs::r2::list"
          data-part="trigger"
          data-scope="tabs"
          data-selected=""
          data-ssr=""
          data-value="tab1"
          dir="ltr"
          id="tabs::r2::trigger-tab1"
          role="tab"
          tabindex="0"
          type="button"
        >
          tab1
        </button>
        <button
          aria-selected="false"
          class="_tab_1ddod_2"
          data-orientation="horizontal"
          data-ownedby="tabs::r2::list"
          data-part="trigger"
          data-scope="tabs"
          data-ssr=""
          data-value="tab2"
          dir="ltr"
          id="tabs::r2::trigger-tab2"
          role="tab"
          tabindex="-1"
          type="button"
        >
          tab2
        </button>
        <button
          aria-selected="false"
          class="_tab_1ddod_2"
          data-orientation="horizontal"
          data-ownedby="tabs::r2::list"
          data-part="trigger"
          data-scope="tabs"
          data-ssr=""
          data-value="tab3"
          dir="ltr"
          id="tabs::r2::trigger-tab3"
          role="tab"
          tabindex="-1"
          type="button"
        >
          tab3
        </button>
      </div>
    </div>
    <div
      class="bg-[--ods-color-primary-050] border border-solid border-[--ods-color-primary-100] border-t-0"
    >
      tab1
    </div>
  </div>
</div>
`;

exports[`TabsComponent > Snapshot tests > should match snapshot with custom contentElement 1`] = `
<div>
  <div>
    <div
      class="_tabs_4moa9_2"
      data-orientation="horizontal"
      data-part="root"
      data-scope="tabs"
      dir="ltr"
      id="tabs::r4:"
    >
      <div
        aria-orientation="horizontal"
        class="_tab-list_9h120_2"
        data-orientation="horizontal"
        data-part="list"
        data-scope="tabs"
        dir="ltr"
        id="tabs::r4::list"
        role="tablist"
      >
        <button
          aria-controls="tabs::r4::content-tab1"
          aria-selected="true"
          class="_tab_1ddod_2"
          data-focus=""
          data-orientation="horizontal"
          data-ownedby="tabs::r4::list"
          data-part="trigger"
          data-scope="tabs"
          data-selected=""
          data-ssr=""
          data-value="tab1"
          dir="ltr"
          id="tabs::r4::trigger-tab1"
          role="tab"
          tabindex="0"
          type="button"
        >
          tab1
        </button>
        <button
          aria-selected="false"
          class="_tab_1ddod_2"
          data-orientation="horizontal"
          data-ownedby="tabs::r4::list"
          data-part="trigger"
          data-scope="tabs"
          data-ssr=""
          data-value="tab2"
          dir="ltr"
          id="tabs::r4::trigger-tab2"
          role="tab"
          tabindex="-1"
          type="button"
        >
          tab2
        </button>
        <button
          aria-selected="false"
          class="_tab_1ddod_2"
          data-orientation="horizontal"
          data-ownedby="tabs::r4::list"
          data-part="trigger"
          data-scope="tabs"
          data-ssr=""
          data-value="tab3"
          dir="ltr"
          id="tabs::r4::trigger-tab3"
          role="tab"
          tabindex="-1"
          type="button"
        >
          tab3
        </button>
      </div>
    </div>
    <div
      class="bg-[--ods-color-primary-050] border border-solid border-[--ods-color-primary-100] border-t-0"
    >
      <div
        data-testid="custom-content-tab1"
      >
        Custom content for 
        tab1
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsComponent > Snapshot tests > should match snapshot with custom item types 1`] = `
<div>
  <div>
    <div
      class="_tabs_4moa9_2"
      data-orientation="horizontal"
      data-part="root"
      data-scope="tabs"
      dir="ltr"
      id="tabs::r6:"
    >
      <div
        aria-orientation="horizontal"
        class="_tab-list_9h120_2"
        data-orientation="horizontal"
        data-part="list"
        data-scope="tabs"
        dir="ltr"
        id="tabs::r6::list"
        role="tablist"
      >
        <button
          aria-selected="false"
          class="_tab_1ddod_2"
          data-orientation="horizontal"
          data-ownedby="tabs::r6::list"
          data-part="trigger"
          data-scope="tabs"
          data-ssr=""
          data-value="[object Object]"
          dir="ltr"
          id="tabs::r6::trigger-[object Object]"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            data-selected="true"
            data-testid="title-1"
          >
            First
          </span>
        </button>
        <button
          aria-selected="false"
          class="_tab_1ddod_2"
          data-orientation="horizontal"
          data-ownedby="tabs::r6::list"
          data-part="trigger"
          data-scope="tabs"
          data-ssr=""
          data-value="[object Object]"
          dir="ltr"
          id="tabs::r6::trigger-[object Object]"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            data-selected="false"
            data-testid="title-2"
          >
            Second
          </span>
        </button>
      </div>
    </div>
    <div
      class="bg-[--ods-color-primary-050] border border-solid border-[--ods-color-primary-100] border-t-0"
    >
      <div
        data-testid="content-1"
      >
        Content 1
      </div>
    </div>
  </div>
</div>
`;

exports[`TabsComponent > Snapshot tests > should match snapshot with custom titleElement 1`] = `
<div>
  <div>
    <div
      class="_tabs_4moa9_2"
      data-orientation="horizontal"
      data-part="root"
      data-scope="tabs"
      dir="ltr"
      id="tabs::r3:"
    >
      <div
        aria-orientation="horizontal"
        class="_tab-list_9h120_2"
        data-orientation="horizontal"
        data-part="list"
        data-scope="tabs"
        dir="ltr"
        id="tabs::r3::list"
        role="tablist"
      >
        <button
          aria-controls="tabs::r3::content-tab1"
          aria-selected="true"
          class="_tab_1ddod_2"
          data-focus=""
          data-orientation="horizontal"
          data-ownedby="tabs::r3::list"
          data-part="trigger"
          data-scope="tabs"
          data-selected=""
          data-ssr=""
          data-value="tab1"
          dir="ltr"
          id="tabs::r3::trigger-tab1"
          role="tab"
          tabindex="0"
          type="button"
        >
          <span
            data-selected="true"
            data-testid="custom-title-tab1"
          >
            Custom 
            tab1
          </span>
        </button>
        <button
          aria-selected="false"
          class="_tab_1ddod_2"
          data-orientation="horizontal"
          data-ownedby="tabs::r3::list"
          data-part="trigger"
          data-scope="tabs"
          data-ssr=""
          data-value="tab2"
          dir="ltr"
          id="tabs::r3::trigger-tab2"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            data-selected="false"
            data-testid="custom-title-tab2"
          >
            Custom 
            tab2
          </span>
        </button>
        <button
          aria-selected="false"
          class="_tab_1ddod_2"
          data-orientation="horizontal"
          data-ownedby="tabs::r3::list"
          data-part="trigger"
          data-scope="tabs"
          data-ssr=""
          data-value="tab3"
          dir="ltr"
          id="tabs::r3::trigger-tab3"
          role="tab"
          tabindex="-1"
          type="button"
        >
          <span
            data-selected="false"
            data-testid="custom-title-tab3"
          >
            Custom 
            tab3
          </span>
        </button>
      </div>
    </div>
    <div
      class="bg-[--ods-color-primary-050] border border-solid border-[--ods-color-primary-100] border-t-0"
    >
      tab1
    </div>
  </div>
</div>
`;

exports[`TabsComponent > Snapshot tests > should match snapshot with default props 1`] = `
<div>
  <div>
    <div
      class="_tabs_4moa9_2"
      data-orientation="horizontal"
      data-part="root"
      data-scope="tabs"
      dir="ltr"
      id="tabs::r0:"
    >
      <div
        aria-orientation="horizontal"
        class="_tab-list_9h120_2"
        data-orientation="horizontal"
        data-part="list"
        data-scope="tabs"
        dir="ltr"
        id="tabs::r0::list"
        role="tablist"
      >
        <button
          aria-controls="tabs::r0::content-tab1"
          aria-selected="true"
          class="_tab_1ddod_2"
          data-focus=""
          data-orientation="horizontal"
          data-ownedby="tabs::r0::list"
          data-part="trigger"
          data-scope="tabs"
          data-selected=""
          data-ssr=""
          data-value="tab1"
          dir="ltr"
          id="tabs::r0::trigger-tab1"
          role="tab"
          tabindex="0"
          type="button"
        >
          tab1
        </button>
        <button
          aria-selected="false"
          class="_tab_1ddod_2"
          data-orientation="horizontal"
          data-ownedby="tabs::r0::list"
          data-part="trigger"
          data-scope="tabs"
          data-ssr=""
          data-value="tab2"
          dir="ltr"
          id="tabs::r0::trigger-tab2"
          role="tab"
          tabindex="-1"
          type="button"
        >
          tab2
        </button>
        <button
          aria-selected="false"
          class="_tab_1ddod_2"
          data-orientation="horizontal"
          data-ownedby="tabs::r0::list"
          data-part="trigger"
          data-scope="tabs"
          data-ssr=""
          data-value="tab3"
          dir="ltr"
          id="tabs::r0::trigger-tab3"
          role="tab"
          tabindex="-1"
          type="button"
        >
          tab3
        </button>
      </div>
    </div>
    <div
      class="bg-[--ods-color-primary-050] border border-solid border-[--ods-color-primary-100] border-t-0"
    >
      tab1
    </div>
  </div>
</div>
`;

exports[`TabsComponent > Snapshot tests > should match snapshot with empty items array 1`] = `
<div>
  <div>
    <div
      class="_tabs_4moa9_2"
      data-orientation="horizontal"
      data-part="root"
      data-scope="tabs"
      dir="ltr"
      id="tabs::r1:"
    >
      <div
        aria-orientation="horizontal"
        class="_tab-list_9h120_2"
        data-orientation="horizontal"
        data-part="list"
        data-scope="tabs"
        dir="ltr"
        id="tabs::r1::list"
        role="tablist"
      />
    </div>
    <div
      class="bg-[--ods-color-primary-050] border border-solid border-[--ods-color-primary-100] border-t-0"
    >
      undefined
    </div>
  </div>
</div>
`;

exports[`TabsComponent > Snapshot tests > should match snapshot with single item 1`] = `
<div>
  <div>
    <div
      class="_tabs_4moa9_2"
      data-orientation="horizontal"
      data-part="root"
      data-scope="tabs"
      dir="ltr"
      id="tabs::r5:"
    >
      <div
        aria-orientation="horizontal"
        class="_tab-list_9h120_2"
        data-orientation="horizontal"
        data-part="list"
        data-scope="tabs"
        dir="ltr"
        id="tabs::r5::list"
        role="tablist"
      >
        <button
          aria-controls="tabs::r5::content-single-tab"
          aria-selected="true"
          class="_tab_1ddod_2"
          data-focus=""
          data-orientation="horizontal"
          data-ownedby="tabs::r5::list"
          data-part="trigger"
          data-scope="tabs"
          data-selected=""
          data-ssr=""
          data-value="single-tab"
          dir="ltr"
          id="tabs::r5::trigger-single-tab"
          role="tab"
          tabindex="0"
          type="button"
        >
          single-tab
        </button>
      </div>
    </div>
    <div
      class="bg-[--ods-color-primary-050] border border-solid border-[--ods-color-primary-100] border-t-0"
    >
      single-tab
    </div>
  </div>
</div>
`;
